--- a/about.html
+++ b/about.html
@@ -213,8 +213,8 @@
                             <h2 class="section__title">
                                 Our Mission<span>.</span>
                             </h2>
-                            <p class="value__desc">Our mission is to streamline the process of equipment distribution, by offering
-                                reliable services and cost-effective, high-quality, innovative, and customized
+                            <p class="value__desc">Our mission is to streamline the process of equipment distribution by offering
+                                reliable services and cost-effective, high-quality, innovative and customized
                                 products as per the Business requirements and as per client’s specific needs.</p>
                         </div>
                        
@@ -237,7 +237,7 @@
                             <p class="contact__desc">
                                 To be a major key provider of specialized equipment and to become a trusted
 leader in the equipment trading industry, known for our commitment to customer
-satisfaction, integrity, and innovation.
+satisfaction, integrity and innovation.
                             </p>
                         </div>
             
@@ -258,7 +258,7 @@ satisfaction, integrity, and innovation.
                             <h2 class="section__title">
                                 Recognitions<span>.</span>
                             </h2>
-                            <p class="value__desc">The world is continually changing. but one thing that will never change is our
+                            <p class="value__desc">The world is continually changing, but one thing that will never change is our
                                 commitment to maintaining the highest ethical standards. Our reputation is one of
                                 our greatest assets. Achieving high Client and Employee satisfaction to reach a
                                 common goal.</p>
