--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <title>Transwill Trading</title>
     </head>
     <body>
-        <div id="loader">
+        <!-- <div id="loader">
             <img src="./assets/img/main-logo.png"/>
-        </div>
+        </div> -->
         <div class="topbar">
             <div class="container">
                 <div class="tb-item">
@@ -309,7 +309,7 @@
                                 <h3 class="product__title">Suspended Platforms</h3>
                                 <p class="product__desc">For all types of construction applications, boilers, safe working load 240 Kgs Platform length 2
                                     mts to 6 mts.</p>
-                                <a href="products.html" class="explore-btn">Explore All <i class='bx bxs-chevrons-right'></i></a>
+                                <a href="products.html?id=1" class="explore-btn">Explore  <i class='bx bxs-chevrons-right'></i></a>
 
                             </div>
                         </article>
@@ -322,7 +322,7 @@
                                 <h3 class="product__title">Lifting Hoists</h3>
                                 <p class="product__desc">Safe working load from 500 Kg to 2000 kg for all types of construction applications, Façade installations,
                                     lift installation and falls car.</p>
-                                <a href="products.html" class="explore-btn">Explore All <i class='bx bxs-chevrons-right'></i></a>
+                                <a href="products.html?id=24" class="explore-btn">Explore  <i class='bx bxs-chevrons-right'></i></a>
 
                             </div>
                         </article>
@@ -335,7 +335,7 @@
                                 <h3 class="product__title">Manual Chain Hoist</h3>
                                 <p class="product__desc">Safe working load from 250 kgs for all types of lifting solutions, construction, and industrial
                                     application</p>
-                                <a href="products.html" class="explore-btn">Explore All <i class='bx bxs-chevrons-right'></i></a>
+                                <a href="products.html?id=23" class="explore-btn">Explore  <i class='bx bxs-chevrons-right'></i></a>
 
                             </div>
                         </article>
@@ -348,7 +348,7 @@
                                 <h3 class="product__title">Jib Cranes</h3>
                                 <p class="product__desc">Jib Cranes floor mounted, wall mounted, and special types of mountings from 250 kg capacity
                                     customized for all types of lifting applications.</p>
-                                <a href="products.html" class="explore-btn">Explore All <i class='bx bxs-chevrons-right'></i></a>
+                                <a href="products.html?id=3" class="explore-btn">Explore  <i class='bx bxs-chevrons-right'></i></a>
 
                             </div>
                         </article>
@@ -362,7 +362,7 @@
                                 <p class="product__desc">Safe working load from 250 kgs for all types of lifting solutions, construction, and industrial
                                     application</p>
 
-                                <a href="products.html" class="explore-btn">Explore All <i class='bx bxs-chevrons-right'></i></a>
+                                <a href="products.html?id=2" class="explore-btn">Explore  <i class='bx bxs-chevrons-right'></i></a>
                                 
                             </div>
                         </article>
